fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   align-items: center;
   background-color: black;
   position: relative;
-  overflow: hidden;
+  overflow-y: scroll;
 }
 
 body::before {
